style fix blue text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --wrong-place: #c9b458;
   --not-valid: #3a3a3a;
   --box-border: #d3d6da;
+  --key-text: black;
 }
 
 .container {
