--- a/src/components/KeyboardGrid.module.css
+++ b/src/components/KeyboardGrid.module.css
@@ -11,6 +11,7 @@
   padding: 10px;
   border-radius: 5px;
   cursor: pointer;
+  color: var(--key-text);
 }
 
 .keyboardGrid div button:active {
